added description and steps

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,3 +1,21 @@
 <h1>Pizza</h1>
 
+<img src="https://www.allrecipes.com/thmb/XajoDY79zQu-znnc2v5CQmo2eDc=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14522-Pizza-On-The-Grill100-4x3-cd872c310ad243c2b39917186df83d77.jpg"
+alt="pizza">
+<h3>Description</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quas!</p>
 
+<h3>Ingredients</h3>
+<ul>
+    <li>yeast</li>
+    <li>sugar</li>
+    <li>bread flour</li>
+    <li>olive oil</li>
+</ul>
+
+<h3>Steps</h3>
+<ol>
+    <li>Let the Dough Come to Room Temperature</li>
+    <li>Prepare Your Surface With Oil</li>
+    <li>Shape the Dough</li>
+</ol>
