--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <h1>Odin Recipes</h1>
 
 <a href="recipes/pizza.html">Recipe Title</a>
+
+<ul>
+    <li><a href="recipes/pizza.html">Pizza</a></li>
+    <li><a href="recipes/burger.html">Burger</a></li>
+</ul>
